ImGui as .a lib file and working! Integrated with make libs too

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 .vscode/
 build
 executable
+
+# Ignore all imgui compilation junk
+lib/imgui/build 
+# Ignore imgui last window saved state
+imgui.ini
