--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,32 @@ Size=400,400
 Collapsed=0
 
 [Window][Another Window]
-Pos=962,37
+Pos=47,76
 Size=268,170
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=523,44
+Size=414,680
+Collapsed=0
+
+[Window][Another Window2]
+Pos=60,60
+Size=205,48
+Collapsed=0
+
+[Window][Demo window]
+Pos=665,256
+Size=258,211
+Collapsed=0
+
+[Window][Ventana temporal - HyperEngine::drawExampleWindowGUI()]
+Pos=853,231
+Size=418,69
+Collapsed=0
+
+[Window][Ventana temporal2 - HyperEngine::drawExampleWindowGUI()]
+Pos=151,172
+Size=592,126
 Collapsed=0
 
